--- a/KurumsalWeb/Web.config
+++ b/KurumsalWeb/Web.config
@@ -47,7 +47,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-
-    <add name="KurumsalDBEntities1" connectionString="metadata=res://*/Models.KurumsalDB.csdl|res://*/Models.KurumsalDB.ssdl|res://*/Models.KurumsalDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-C3JB3BU\SQLEXPRESS;initial catalog=KurumsalDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="KurumsalWebDB"
+		   connectionString="Server=DESKTOP-C3JB3BU\SQLEXPRESS;Database=KurumsalWebDB; Integrated Security=true;"
+		   providerName="System.Data.SqlClient"/>
+  
   </connectionStrings>
 </configuration>
