--- a/KurumsalWeb/KurumsalWeb.csproj
+++ b/KurumsalWeb/KurumsalWeb.csproj
@@ -1069,7 +1069,10 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\HakkimizdaController.cs" />
+    <Compile Include="Controllers\HizmetController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IletisimController.cs" />
     <Compile Include="Controllers\KimlikController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -1117,6 +1120,16 @@
     <Content Include="Scripts\jquery-3.5.1.min.map" />
     <Content Include="Views\Kimlik\Index.cshtml" />
     <Content Include="Views\Kimlik\Edit.cshtml" />
+    <Content Include="Views\Hakkimizda\Index.cshtml" />
+    <Content Include="Views\Hakkimizda\Edit.cshtml" />
+    <Content Include="Views\Iletisim\Create.cshtml" />
+    <Content Include="Views\Iletisim\Delete.cshtml" />
+    <Content Include="Views\Iletisim\Details.cshtml" />
+    <Content Include="Views\Iletisim\Edit.cshtml" />
+    <Content Include="Views\Iletisim\Index.cshtml" />
+    <Content Include="Views\Hizmet\Index.cshtml" />
+    <Content Include="Views\Hizmet\Create.cshtml" />
+    <Content Include="Views\Hizmet\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1126,6 +1139,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Uploads\Hizmet\" />
     <Folder Include="Uploads\Kimlik\" />
   </ItemGroup>
   <ItemGroup>
