--- a/KurumsalWeb/bin/KurumsalWeb.dll.config
+++ b/KurumsalWeb/bin/KurumsalWeb.dll.config
@@ -47,7 +47,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-	  <add name="KurumsalWebDB" connectionString="Server=DESKTOP-C3JB3BU\SQLEXPRESS;Database=KurumsalWebDB; Integrated Security=true;" providerName="System.Data.SqlClient" />
+	  <add name="KurumsalWebDB" connectionString="Server=DESKTOP-VG1139F;Database=KurumsalWebDB; Integrated Security=true;" providerName="System.Data.SqlClient" />
   
   </connectionStrings>
 </configuration>
